--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "trae-project",
+  "name": "english-learning-platform",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -21,10 +21,14 @@
     "tailwind-merge": "^3.3.0",
     "vue": "^3.4.15",
     "vue-echarts": "^7.0.3",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "@vueuse/core": "^11.0.0",
+    "dayjs": "^1.11.10",
+    "lodash-es": "^4.17.21"
   },
   "devDependencies": {
     "@types/node": "^22.15.30",
+    "@types/lodash-es": "^4.17.12",
     "@typescript-eslint/eslint-plugin": "^7.0.1",
     "@typescript-eslint/parser": "^7.0.1",
     "@vitejs/plugin-vue": "^5.0.3",
@@ -37,9 +41,7 @@
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
     "typescript": "~5.3.3",
-    "unplugin-vue-dev-locator": "^1.0.0",
     "vite": "^5.0.12",
-    "vite-plugin-trae-solo-badge": "^1.0.0",
     "vue-tsc": "^1.8.27"
   }
 }
